force-app/main/default/objects/Account/fields/ActionsAnnualTarget__c.field-meta.xml
<CustomField>
    <fullName>ActionsAnnualTarget__c</fullName>
    <label>Actions Annual Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>