force-app/main/default/objects/Account/fields/Alle_gewonnenen_Verkaufschancen__c.field-meta.xml
<CustomField>
    <fullName>Alle_gewonnenen_Verkaufschancen__c</fullName>
    <label>Anzahl gewonnene Verkaufschancen</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>VKC gewonnen</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>