force-app/main/default/objects/Account/fields/Amtsgericht_bei_Kapitalgesellschaften__c.field-meta.xml
<CustomField>
    <fullName>Amtsgericht_bei_Kapitalgesellschaften__c</fullName>
    <label>Amtsgericht (bei Kapitalgesellschaften)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>