force-app/main/default/objects/Account/fields/AnnualTargetPlanning__c.field-meta.xml
<CustomField>
    <fullName>AnnualTargetPlanning__c</fullName>
    <label>Annual Target Planning</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>