force-app/main/default/objects/Account/fields/AnsaessigAusserhalbVonDeutschland__c.field-meta.xml
<CustomField>
    <fullName>AnsaessigAusserhalbVonDeutschland__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ansässig außerhalb von Deutschland</label>
    <type>Checkbox</type>
</CustomField>