force-app/main/default/objects/Account/fields/Ansprechpartner__c.field-meta.xml
<CustomField>
    <fullName>Ansprechpartner__c</fullName>
    <formula>if(ISBLANK(Externer_Maklerbetreuer__c), Maklerbetreuer_Wirtschaftshaus_2__r.FirstName + &apos; &apos; + Maklerbetreuer_Wirtschaftshaus_2__r.LastName, Externer_Maklerbetreuer__r.FirstName + &apos; &apos; + Externer_Maklerbetreuer__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ansprechpartner</label>
    <type>Text</type>
</CustomField>