force-app/main/default/objects/Account/fields/AnzahlBewertungen__c.field-meta.xml
<CustomField>
    <fullName>AnzahlBewertungen__c</fullName>
    <label>Anzahl Bewertungen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>