force-app/main/default/objects/Account/fields/Aufteilung__c.field-meta.xml
<CustomField>
    <fullName>Aufteilung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aufteilung</label>
    <type>Checkbox</type>
</CustomField>