force-app/main/default/objects/Account/fields/BackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>BackgroundColor__c</fullName>
    <defaultValue>&quot;0, 75, 65&quot;</defaultValue>
    <label>BackgroundColor</label>
    <length>14</length>
    <type>Text</type>
</CustomField>