force-app/main/default/objects/Account/fields/BackofficeActivationCall__c.field-meta.xml
<CustomField>
    <fullName>BackofficeActivationCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backoffice Aktivierungstelefonie</label>
    <type>Checkbox</type>
</CustomField>