force-app/main/default/objects/Account/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank, Hausbank</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>