force-app/main/default/objects/Account/fields/Bankleitzahl__c.field-meta.xml
<CustomField>
    <fullName>Bankleitzahl__c</fullName>
    <label>Bankleitzahl</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>