force-app/main/default/objects/Account/fields/bergeordneter_Account_Anschrift__c.field-meta.xml
<CustomField>
    <fullName>bergeordneter_Account_Anschrift__c</fullName>
    <formula>Parent.BillingPostalCode + &apos; &apos; + Parent.BillingCity + &apos;, &apos; + Parent.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Übergeordneter Account Anschrift</label>
    <type>Text</type>
</CustomField>