force-app/main/default/objects/Account/fields/bergeordneter_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>bergeordneter_Account_Name__c</fullName>
    <formula>Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Übergeordneter Account Name</label>
    <type>Text</type>
</CustomField>