force-app/main/default/objects/Account/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branding</label>
    <referenceTo>Branding__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>