force-app/main/default/objects/Account/fields/BusinessDataYear__c.field-meta.xml
<CustomField>
    <fullName>BusinessDataYear__c</fullName>
    <label>Geschäftsdaten Jahr</label>
    <length>4</length>
    <type>Text</type>
</CustomField>