force-app/main/default/objects/Account/fields/CalculationsCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>CalculationsCurrentYear__c</fullName>
    <label>Berechnungen aktuelles Jahr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>