force-app/main/default/objects/Account/fields/Carestone_Vertriebsvereinbarung__c.field-meta.xml
<CustomField>
    <fullName>Carestone_Vertriebsvereinbarung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carestone Vertriebsvereinbarung</label>
    <type>Checkbox</type>
</CustomField>