force-app/main/default/objects/Account/fields/CarestoneSetter__c.field-meta.xml
<CustomField>
    <fullName>CarestoneSetter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carestone Setter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact)</relationshipLabel>
    <relationshipName>AccountContactSetter</relationshipName>
    <type>Lookup</type>
</CustomField>