force-app/main/default/objects/Account/fields/CS_Vertriebsvereinbarung_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Vertriebsvereinbarung_Status__c</fullName>
    <label>CS Vertriebsvereinbarung Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keine Vereinbarung</fullName>
            </value>
            <value>
                <fullName>Vom Maklerbetreuer angefordert</fullName>
            </value>
            <value>
                <fullName>Erstellt und an Makler versendet</fullName>
            </value>
            <value>
                <fullName>Unterschrieben eingegangen</fullName>
            </value>
            <value>
                <fullName>Maklerauftrag beidseitig unterzeichnet</fullName>
            </value>
            <value>
                <fullName>Makler ohne eigenen Vertrag</fullName>
            </value>
            <value>
                <fullName>Vom Makler gekündigt</fullName>
            </value>
            <value>
                <fullName>Von CareStone gekündigt</fullName>
            </value>
            <value>
                <fullName>Neue Vertriebsvereinbarung unterschrieben</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>