force-app/main/default/objects/Account/fields/CS_VV_Bearbeitungsdatum__c.field-meta.xml
<CustomField>
    <fullName>CS_VV_Bearbeitungsdatum__c</fullName>
    <inlineHelpText>Wann wurde die Vertriebsvereinbarung zuletzt bearbeitet?</inlineHelpText>
    <label>CS VV Bearbeitungsdatum</label>
    <type>DateTime</type>
</CustomField>