force-app/main/default/objects/Account/fields/CS_VV_g_ltig_seit__c.field-meta.xml
<CustomField>
    <fullName>CS_VV_g_ltig_seit__c</fullName>
    <label>CS VV gültig seit</label>
    <type>Date</type>
</CustomField>