force-app/main/default/objects/Account/fields/CS_VV_verschickt_am__c.field-meta.xml
<CustomField>
    <fullName>CS_VV_verschickt_am__c</fullName>
    <label>CS VV verschickt am</label>
    <type>Date</type>
</CustomField>