force-app/main/default/objects/Account/fields/CustomerCreditsInBillion__c.field-meta.xml
<CustomField>
    <fullName>CustomerCreditsInBillion__c</fullName>
    <label>Kundenkredite in Mrd. €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>