force-app/main/default/objects/Account/fields/CustomersCreatedCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>CustomersCreatedCurrentYear__c</fullName>
    <label>Angelegte Interessenten aktuelles Jahr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>