force-app/main/default/objects/Account/fields/Datev_Mandantennummer__c.field-meta.xml
<CustomField>
    <fullName>Datev_Mandantennummer__c</fullName>
    <label>Datev Mandantennummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>