force-app/main/default/objects/Account/fields/DatevKreditorennummer__c.field-meta.xml
<CustomField>
    <fullName>DatevKreditorennummer__c</fullName>
    <label>Datev Kreditorennummer</label>
    <length>7</length>
    <type>Text</type>
</CustomField>