force-app/main/default/objects/Account/fields/Dauerhaft_gesch_tzt__c.field-meta.xml
<CustomField>
    <fullName>Dauerhaft_gesch_tzt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dieser Makler ist auf unbestimmte Zeit geschützt</inlineHelpText>
    <label>Dauerhaft geschützt</label>
    <type>Checkbox</type>
</CustomField>