force-app/main/default/objects/Account/fields/DurchschnittBewertungen__c.field-meta.xml
<CustomField>
    <fullName>DurchschnittBewertungen__c</fullName>
    <label>Durchschnitt Bewertungen</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>