force-app/main/default/objects/Account/fields/E_Mail_bergeordneter_Makler__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_bergeordneter_Makler__c</fullName>
    <inlineHelpText>Die E-Mail Adresse des übergeordneten Maklers</inlineHelpText>
    <label>E-Mail übergeordneter Makler</label>
    <type>Email</type>
</CustomField>