force-app/main/default/objects/Account/fields/Externer_Maklerbetreuer__c.field-meta.xml
<CustomField>
    <fullName>Externer_Maklerbetreuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Externer Maklerbetreuer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Externer Maklerbetreuer)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>