force-app/main/default/objects/Account/fields/FacebookUrl__c.field-meta.xml
<CustomField>
    <fullName>FacebookUrl__c</fullName>
    <label>Facebook Url</label>
    <type>Url</type>
</CustomField>