force-app/main/default/objects/Account/fields/FarbeHintergrund__c.field-meta.xml
<CustomField>
    <fullName>FarbeHintergrund__c</fullName>
    <defaultValue>&apos;0, 75, 65&apos;</defaultValue>
    <label>Farbe Hintergrund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>