force-app/main/default/objects/Account/fields/FarbeText__c.field-meta.xml
<CustomField>
    <fullName>FarbeText__c</fullName>
    <defaultValue>&apos;243, 192, 92&apos;</defaultValue>
    <label>Farbe Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>