force-app/main/default/objects/Account/fields/Feldaenderungen__c.field-meta.xml
<CustomField>
    <fullName>Feldaenderungen__c</fullName>
    <label>Feldänderungen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>