force-app/main/default/objects/Account/fields/Finanzamt__c.field-meta.xml
<CustomField>
    <fullName>Finanzamt__c</fullName>
    <label>Finanzamt</label>
    <length>25</length>
    <type>Text</type>
</CustomField>