force-app/main/default/objects/Account/fields/ForecastCurrentOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ForecastCurrentOpportunities__c</fullName>
    <formula>ProbabilitiesOpportunitiesSum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prognose Verkaufschancen aktuell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>