force-app/main/default/objects/Account/fields/ForecastYearOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ForecastYearOpportunities__c</fullName>
    <formula>ProbabilitiesOpportunitiesSum__c / Util_CurrentYearsProgress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prognose Verkaufschancen Jahr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>