force-app/main/default/objects/Account/fields/Genehmiger__c.field-meta.xml
<CustomField>
    <fullName>Genehmiger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genehmiger</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>