force-app/main/default/objects/Account/fields/Gesch_ftsbeziehung__c.field-meta.xml
<CustomField>
    <fullName>Gesch_ftsbeziehung__c</fullName>
    <label>Geschäftsbeziehung</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hausbank</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Notar</fullName>
            </value>
            <value>
                <fullName>Versicherungsmakler</fullName>
            </value>
            <value>
                <fullName>Immobilienmakler</fullName>
            </value>
            <value>
                <fullName>Dienstleister</fullName>
            </value>
            <value>
                <fullName>Finanzmakler</fullName>
            </value>
            <value>
                <fullName>Gekündigt vom WirtschaftsHaus</fullName>
            </value>
            <value>
                <fullName>Gekündigt von Extern</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Bauträger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>