force-app/main/default/objects/Account/fields/GeschaeftsfuehrerNeu__c.field-meta.xml
<CustomField>
    <fullName>GeschaeftsfuehrerNeu__c</fullName>
    <label>Geschäftsführer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>