force-app/main/default/objects/Account/fields/Geschueftsfuehrer__c.field-meta.xml
<CustomField>
    <fullName>Geschueftsfuehrer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Geschäftsführer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Geschäftsführer)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>