force-app/main/default/objects/Account/fields/GoogleMyBusinessUrl__c.field-meta.xml
<CustomField>
    <fullName>GoogleMyBusinessUrl__c</fullName>
    <label>Google My Business Url</label>
    <type>Url</type>
</CustomField>