force-app/main/default/objects/Account/fields/Gruendungsjahr__c.field-meta.xml
<CustomField>
    <fullName>Gruendungsjahr__c</fullName>
    <label>Gründungsjahr</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>