force-app/main/default/objects/Account/fields/HatEigeneFinanzierung__c.field-meta.xml
<CustomField>
    <fullName>HatEigeneFinanzierung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hat eigene Finanzierung</label>
    <type>Checkbox</type>
</CustomField>