force-app/main/default/objects/Account/fields/Hinweis_zur_MwSt__c.field-meta.xml
<CustomField>
    <fullName>Hinweis_zur_MwSt__c</fullName>
    <inlineHelpText>Bitte gib hier an, woher die Information kommt, welchen MwSt-Satz der Makler hat</inlineHelpText>
    <label>Hinweis zur MwSt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>