force-app/main/default/objects/Account/fields/HRB_bei_Kapitalgesellschaften__c.field-meta.xml
<CustomField>
    <fullName>HRB_bei_Kapitalgesellschaften__c</fullName>
    <label>HRB (bei Kapitalgesellschaften)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>