force-app/main/default/objects/Account/fields/IBANUngueltig__c.field-meta.xml
<CustomField>
    <fullName>IBANUngueltig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IBAN ungültig</label>
    <type>Checkbox</type>
</CustomField>