force-app/main/default/objects/Account/fields/IncomingCallsCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallsCurrentYear__c</fullName>
    <label>Anzahl eingehende Telefonate dieses Jahr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>