force-app/main/default/objects/Account/fields/InstagramUrl__c.field-meta.xml
<CustomField>
    <fullName>InstagramUrl__c</fullName>
    <label>Instagram Url</label>
    <type>Url</type>
</CustomField>