force-app/main/default/objects/Account/fields/Internen_Maklerbetreuer_anzeigen__c.field-meta.xml
<CustomField>
    <fullName>Internen_Maklerbetreuer_anzeigen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Externen Maklerbetreuer anzeigen</label>
    <type>Checkbox</type>
</CustomField>