force-app/main/default/objects/Account/fields/IsKeyAccount__c.field-meta.xml
<CustomField>
    <fullName>IsKeyAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>