force-app/main/default/objects/Account/fields/IstMaklerbetreuerCarestone__c.field-meta.xml
<CustomField>
    <fullName>IstMaklerbetreuerCarestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ist Maklerbetreuer Carestone</label>
    <type>Checkbox</type>
</CustomField>