force-app/main/default/objects/Account/fields/Kategorie__c.field-meta.xml
<CustomField>
    <fullName>Kategorie__c</fullName>
    <inlineHelpText>Vergeben Sie A, B, C oder D für eine entsprechende Klassifizierung des Potenzials und der Aktivität dieses Maklers.(A = Topmakler, B = Gelegentlich aktiv, hat produziert, C = Potenzial vorhanden und noch zu entwickeln, D = Kein Potenzial, Vertriebsverbot = nicht mehr kontaktieren)</inlineHelpText>
    <label>Klassifizierung</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nicht kategorisiert</fullName>
                <default>true</default>
                <label>Nicht kategorisiert</label>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>Vertriebsverbot</fullName>
            </value>
            <value>
                <fullName>Disqualifiziert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>