force-app/main/default/objects/Account/fields/keine_E_Mails__c.field-meta.xml
<CustomField>
    <fullName>keine_E_Mails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wenn der Account keine E-Mails bekommen möchte/soll, dann hier bitte Haken setzen</inlineHelpText>
    <label>keine E-Mails</label>
    <type>Checkbox</type>
</CustomField>