force-app/main/default/objects/Account/fields/Kleinunternehmer_Nachweis_hochgeladen__c.field-meta.xml
<CustomField>
    <fullName>Kleinunternehmer_Nachweis_hochgeladen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kleinunternehmer Nachweis hochgeladen</label>
    <type>Checkbox</type>
</CustomField>