force-app/main/default/objects/Account/fields/KMAZBEingegangen__c.field-meta.xml
<CustomField>
    <fullName>KMAZBEingegangen__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - AZB eingegangen</label>
    <type>Checkbox</type>
</CustomField>