force-app/main/default/objects/Account/fields/KMFehlendeUnterlagenFuerProvision__c.field-meta.xml
<CustomField>
    <fullName>KMFehlendeUnterlagenFuerProvision__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - fehlende Unterlagen für Provision</label>
    <type>Checkbox</type>
</CustomField>