force-app/main/default/objects/Account/fields/KMInteressentAngelegt__c.field-meta.xml
<CustomField>
    <fullName>KMInteressentAngelegt__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Interessent angelegt</label>
    <type>Checkbox</type>
</CustomField>