force-app/main/default/objects/Account/fields/KMKaufpreisBezahlt__c.field-meta.xml
<CustomField>
    <fullName>KMKaufpreisBezahlt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KM - Kaufpreis bezahlt</label>
    <type>Checkbox</type>
</CustomField>