force-app/main/default/objects/Account/fields/KMKaufpreisFaelligGestellt__c.field-meta.xml
<CustomField>
    <fullName>KMKaufpreisFaelligGestellt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KM - Kaufpreis fällig gestellt</label>
    <type>Checkbox</type>
</CustomField>