force-app/main/default/objects/Account/fields/KMKaufvertragsangebotAbgegeben__c.field-meta.xml
<CustomField>
    <fullName>KMKaufvertragsangebotAbgegeben__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KM - Kaufvertragsangebot abgegeben</label>
    <type>Checkbox</type>
</CustomField>