force-app/main/default/objects/Account/fields/KMKaufvertragsangebotVerschickt__c.field-meta.xml
<CustomField>
    <fullName>KMKaufvertragsangebotVerschickt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KM - Kaufvertragsangebot verschickt</label>
    <type>Checkbox</type>
</CustomField>