force-app/main/default/objects/Account/fields/KMNeueBerechnungImImmofinder__c.field-meta.xml
<CustomField>
    <fullName>KMNeueBerechnungImImmofinder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KM - Neue Berechnung im Immofinder</label>
    <type>Checkbox</type>
</CustomField>