force-app/main/default/objects/Account/fields/KMNotarterminHatStattgefunden__c.field-meta.xml
<CustomField>
    <fullName>KMNotarterminHatStattgefunden__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Notartermin hat stattgefunden</label>
    <type>Checkbox</type>
</CustomField>