force-app/main/default/objects/Account/fields/KMNotarterminVereinbartKunde__c.field-meta.xml
<CustomField>
    <fullName>KMNotarterminVereinbartKunde__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Notartermin vereinbart Kunde</label>
    <type>Checkbox</type>
</CustomField>