force-app/main/default/objects/Account/fields/KMNotarterminVereinbartMakler__c.field-meta.xml
<CustomField>
    <fullName>KMNotarterminVereinbartMakler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Notartermin vereinbart Makler</label>
    <type>Checkbox</type>
</CustomField>