force-app/main/default/objects/Account/fields/KMProvisionsvoraussetzungenErfuellt__c.field-meta.xml
<CustomField>
    <fullName>KMProvisionsvoraussetzungenErfuellt__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Provisionsvoraussetzungen erfüllt</label>
    <type>Checkbox</type>
</CustomField>