force-app/main/default/objects/Account/fields/KMReservierungErloschenKunde__c.field-meta.xml
<CustomField>
    <fullName>KMReservierungErloschenKunde__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Reservierung erloschen Kunde</label>
    <type>Checkbox</type>
</CustomField>