force-app/main/default/objects/Account/fields/KMReservierungErloschenMakler__c.field-meta.xml
<CustomField>
    <fullName>KMReservierungErloschenMakler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Reservierung erloschen Makler</label>
    <type>Checkbox</type>
</CustomField>