force-app/main/default/objects/Account/fields/KMReservierungImSystemKunde__c.field-meta.xml
<CustomField>
    <fullName>KMReservierungImSystemKunde__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Reservierung im System Kunde</label>
    <type>Checkbox</type>
</CustomField>