force-app/main/default/objects/Account/fields/KMReservierungImSystemMakler__c.field-meta.xml
<CustomField>
    <fullName>KMReservierungImSystemMakler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Reservierung im System Makler</label>
    <type>Checkbox</type>
</CustomField>