force-app/main/default/objects/Account/fields/KMReservierunglaeuftInXTagenaus__c.field-meta.xml
<CustomField>
    <fullName>KMReservierunglaeuftInXTagenaus__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Reservierung läuft in X Tagen aus</label>
    <type>Checkbox</type>
</CustomField>