force-app/main/default/objects/Account/fields/KMUnterlagenAnNotarVersendet__c.field-meta.xml
<CustomField>
    <fullName>KMUnterlagenAnNotarVersendet__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KM - Unterlagen an Notar versendet</label>
    <type>Checkbox</type>
</CustomField>