force-app/main/default/objects/Account/fields/Kommentar_zum_Maklerauftrag__c.field-meta.xml
<CustomField>
    <fullName>Kommentar_zum_Maklerauftrag__c</fullName>
    <label>Kommentar zum Maklerauftrag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>