force-app/main/default/objects/Account/fields/Konto_Nummer__c.field-meta.xml
<CustomField>
    <fullName>Konto_Nummer__c</fullName>
    <label>Konto Nummer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>