force-app/main/default/objects/Account/fields/LastCalculation__c.field-meta.xml
<CustomField>
    <fullName>LastCalculation__c</fullName>
    <label>Datum letzte Berechnung</label>
    <type>DateTime</type>
</CustomField>