force-app/main/default/objects/Account/fields/LastIncomingCall__c.field-meta.xml
<CustomField>
    <fullName>LastIncomingCall__c</fullName>
    <label>Datum letztes eingehendes Telefonat</label>
    <type>DateTime</type>
</CustomField>