force-app/main/default/objects/Account/fields/LastOutgoingCall__c.field-meta.xml
<CustomField>
    <fullName>LastOutgoingCall__c</fullName>
    <label>Datum letztes ausgehendes Telefonat</label>
    <type>DateTime</type>
</CustomField>