force-app/main/default/objects/Account/fields/Letzter_Notartermin_vor_2023__c.field-meta.xml
<CustomField>
    <fullName>Letzter_Notartermin_vor_2023__c</fullName>
    <label>Letzter Notartermin vor 2023</label>
    <summarizedField>Opportunity.Notartermin__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Notartermin__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>