force-app/main/default/objects/Account/fields/LinkedInUrl__c.field-meta.xml
<CustomField>
    <fullName>LinkedInUrl__c</fullName>
    <label>LinkedIn Url</label>
    <type>Url</type>
</CustomField>