force-app/main/default/objects/Account/fields/LogoUrl__c.field-meta.xml
<CustomField>
    <fullName>LogoUrl__c</fullName>
    <label>Logo Url</label>
    <type>Url</type>
</CustomField>