force-app/main/default/objects/Account/fields/MaBV__c.field-meta.xml
<CustomField>
    <fullName>MaBV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MaBV</label>
    <type>Checkbox</type>
</CustomField>