force-app/main/default/objects/Account/fields/Makler_Status__c.field-meta.xml
<CustomField>
    <fullName>Makler_Status__c</fullName>
    <inlineHelpText>Bitte die Felder WHS Maklerauftrag / WH SACH Maklerauftrag benutzen</inlineHelpText>
    <label>Makler Status(veraltet)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Makler ohne Vertrag</fullName>
            </value>
            <value>
                <fullName>Maklerauftrag verschickt</fullName>
            </value>
            <value>
                <fullName>Makler mit Vertrag</fullName>
            </value>
            <value>
                <fullName>Vertrag vom WH gekündigt</fullName>
            </value>
            <value>
                <fullName>Makler ohne eigenen Vertrag</fullName>
            </value>
            <value>
                <fullName>Makler ist nicht interessiert</fullName>
            </value>
            <value>
                <fullName>Makler mit altem Vertrag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>