force-app/main/default/objects/Account/fields/Maklerauftr_ge__c.field-meta.xml
<CustomField>
    <fullName>Maklerauftr_ge__c</fullName>
    <description>Makleraufträge und Objektvereinbarungen</description>
    <inlineHelpText>Hier Makleraufträge und Objektvereinbarungen angeben</inlineHelpText>
    <label>Makleraufträge und Objektvereinbarungen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WHS Maklerauftrag</fullName>
            </value>
            <value>
                <fullName>WH Sach Rahmenvereinbarung</fullName>
            </value>
            <value>
                <fullName>OV Heiligenhafen Torhaus</fullName>
            </value>
            <value>
                <fullName>OV Heiligenhafen Gutshaus</fullName>
            </value>
            <value>
                <fullName>OV Heiligenhafen Fischerhaus</fullName>
            </value>
            <value>
                <fullName>OV Wohnpark Bergen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>