force-app/main/default/objects/Account/fields/Maklerbetreuer__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maklerbetreuer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Maklerbetreuer)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>