force-app/main/default/objects/Account/fields/Maklerbetreuer_Wirtschaftshaus_2__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer_Wirtschaftshaus_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maklerbetreuer Carestone</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Maklerbetreuer Wirtschaftshaus)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>